@@ -62,6 +62,6 @@ public class SwaggerConfig extends WebMvcConfigurationSupport {
         AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEveryThing");
         AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
         authorizationScopes[0] = authorizationScope;
-        return Arrays.asList(new SecurityReference(REFERENCE, authorizationScopes));
+        return List.of(new SecurityReference(REFERENCE, authorizationScopes));
     }
 }
